# FiCast-GPT

./: .example.env  .gitignore  .gitmodules  README.md  config.yaml  conversation.ipynb  makefile  package-lock.json  package.json  pyproject.toml  setup.py
.github/workflows/: TestPyPi.yml
apps/api/: .env.example  ficast.db  main.py  models.py  services.py  tasks.py  utils.py
apps/api/app/: config.py  main.py  tasks.py  utils.py
apps/api/routes/: auth.py  podcast.py
apps/docker/: docker-compose.ficast.yml  dockerfile.ficast
apps/ficast/: .env.example  .example.env  .gitignore  ficast.db  run-dev.sh
apps/ficast/app/: constants.py  logger.py  main.py  utils.py
apps/ficast/scripts/: api-entrypoint.sh  (+6 more)
apps/router/: main.py
apps/web/: .env.example  .gitignore  README.md  package-lock.json  package.json  postcss.config.mjs  tailwind.config.ts  tsconfig.json
apps/youtube/: .example.env  main.py
conf/: .gitignore  OAI_CONFIG_LIST_sample.txt  default.v2.0.yaml
conf/dialogue/: api.yaml  base.yaml  default.yaml  docker-api.yaml  guests.yaml  system_prompts.yaml
conversation/: __init__.py  agent.py  base.py  conversation.py
conversation/autogen/: agents.py  main.py  management.py  utils.py
conversation/langchain/: agent.py  conversation.py
docker/: Dockerfile.ficast  docker-compose.ficast.yml
documentation/dev/: configuration.yaml
ficast/: characters.py  config.py  conversation.py  ficast.py
ficast-outputs/dialogue/: last_used_voice.json  voice_metainfo.json
ficast/assembly/: __init__.py  base.py  ficast.py  podcast.py
ficast/character/: base.py  config.py  podcast.py  podcaster.py  utils.py
ficast/conversation/: base.py  config.py  podcast.py  prompts.py  utils.py
ficast/dialogue/: base.py  clients.py  config.py  speech.py  synthesis.py  turtoise_tts.py  utils.py
ficast/music/: musicScrape.py  sources.yaml
ficast/speech/: eleven_apis.yaml  speech_synthesis.py
music/: musicScrape.py
notebooks/: .gitignore  quickstart.ipynb  script_to_dialogue.ipynb  tts_client.ipynb  yt_upload_videos.ipynb
notebooks/voice/: voice_metainfo.json
outputs/conversations/: 20240629235449.txt  20240630040454.json
rag_input/: query.py  scrape_data.py
server/router/: auth.py  validators.py
speech/: speech_synthesis.py
test/: gen_podcast.py  query.py  server.py
test/app/: gen.py  main.py  request.sh
tests/clients/: test_api_client.py  test_elevenlabs_client.py
tests/dialogue/: test_dialogue_synthesis.py  test_text_to_speech.py
web/: .gitignore  package-lock.json  package.json  tailwind.config.ts
(+116 files in other folders)
