[tool.poetry]
name = "ficast"
version = "0.2.1"
description = "A Python package for processing & producing PodCast overlayed with music aligned to the podcast : Fi-Casts is LoFi + Podcast"
authors = ["supermomo668 <mymomo119966.mm@gmail.com>"]
license = "apache2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
elevenlabs = "^1.5.0"
gender-guesser = "^0.4.0"
thought-agents = { version = "0.3.2", source = "test-pypi" }

[tool.poetry.group.test.dependencies]
pytest = "^6.2.4"

[tool.poetry.group.youtube.dependencies]
google-api-python-client = "^2.32.0"
google_auth_oauthlib = "^0.4.6"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "test-pypi"
url = "https://test.pypi.org/simple/"
priority = "explicit"